Adding new mfe-landing w. SSR, run all script

--- a/shell/src/app/components/header/header.component.html
+++ b/shell/src/app/components/header/header.component.html
@@ -3,4 +3,5 @@
 <mat-menu #mfes="matMenu">
     <button mat-menu-item routerLink="/mfe1">mfe1</button>
     <button mat-menu-item routerLink="/mfe2">mfe2</button>
+    <button mat-menu-item routerLink="/landing">landing</button>
 </mat-menu>
