--- a/shared/projects/shared-lib/src/lib/table/table.component.html
+++ b/shared/projects/shared-lib/src/lib/table/table.component.html
@@ -1,1 +1,12 @@
-<p>table works!</p>
+<table mat-table [dataSource]="data">
+  <ng-container *ngFor="let column of columns" [matColumnDef]="column.key">
+    <th mat-header-cell *matHeaderCellDef>
+      {{ column.label }}
+    </th>
+    <td mat-cell *matCellDef="let row">
+      <lib-table-element [row]="row" [column]="column"></lib-table-element>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
